--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -21,6 +21,8 @@ jobs:
       run: npm run lint
     - name: Install Playwright Browsers
       run: npx playwright install --with-deps chromium
+    - name: Build
+      run: npm run build
     - name: Run tests
       run: npm test
     - uses: actions/upload-artifact@v4
