ver間の不整合を修正

--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -22,6 +22,7 @@ jobs:
       run: |
         cd wasm-build
         bundle install
+        bundle update ruby_wasm
     - name: Install Node dependencies
       run: npm install
     - name: Generate RBS
