--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "vitest": "^4.0.18"
   },
   "dependencies": {
-    "@ruby/wasm-wasi": "latest",
+    "@ruby/wasm-wasi": "^2.8.1",
     "monaco-editor": "^0.55.1",
     "pako": "^2.1.0"
   }
